container no longer overlaps new card button

--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -8,7 +8,12 @@ body
   margin-right: auto
   background-color: #EEEEEE !Important
   font-family: 'Roboto'
-
+.grid
+  max-width: 300px
+.row
+  max-width: 300px
+.container
+  max-width: 300px
 .card
   background-color: #fff
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5)
